# invoice_module

./: .env.example  HARD_CODED_DATA_AUDIT.md  PHASE_4_COMPLETION.md  SETUP.md  docker-compose.yml  friction-report.md  implementation-index.docx  pyproject.toml  requirements.txt  seed_data.py  start.sh
.claude/: launch.json
backend/: __init__.py  auth.py  cards.py  config.py  decision_ledger.py  flow.py  main.py  scheduler.py  setup_wizard.py
docs/: ACS_REALM_SETUP.md  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  FAQ.md  INDEX.md  INITIAL_SETUP.md  OPERATIONS_MANUAL.md  PLAID_SETUP.md  ROLES_AND_PERMISSIONS.md  SECURITY_BEST_PRACTICES.md  TROUBLESHOOTING_GUIDE.md
frontend/: _shell.html  accrual-amortization.html  adversarial-findings.html  audit.html  auditor.html  browser-setup.html  budget.html  cabinet.html  cash-forecast-weekly.html  chat.html  coa.html  compliance-continuous.html  compliance.html  council.html  dashboard.html  decision-ledger.html  eime-bus.js  eime-chat-rail.js  eime-responsive.js  eime-session.js  eime-shell.js  eime-toast.js  event-registry.html  event-tagging.html  exceptions-queue.html  federated-benchmark.html  forecast-merge.html  inbox.html  index.html  jes.html  jobs.html  knowledge-base.html  multi-entity-rollup.html  operations-council.html  payments.html  pledge-matching.html  policies-queue.html  policy-management.html  question-canvas.html  questions-queue.html  (+12 more)
openclaw/: ORCHESTRATION_SEQUENCE.md  __init__.py  cabinet.yaml  runtime.py
samples/: BUDGET-TESTING-GUIDE.md  QUICK-START.md  (+6 more)
(+390 files in other folders)
