[project]
name = "eime"
version = "1.0.0"
description = "Embark Invoice Mapping Engine - Church COA multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "crewai>=0.86.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    "jinja2>=3.1.4",
    "python-frontmatter>=1.1.0",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "fpdf2>=2.7.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "apscheduler>=3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
